--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/cloudinary": "^1.0.3",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "srt-parser-2": "^1.1.7",
